# 6502-Emulator

./: .gitignore  CMakeLists.txt  main.cpp
controller/: .gitignore  code_editor.cpp  code_editor.h  console.cpp  console.h  hex_editor.cpp  hex_editor.h
model/: memory.cpp  memory.h  text.cpp  text.h
view/: codeEditorView.cpp  codeEditorView.h  gui.glade  hexEditorView.cpp  hexEditorView.h  outputView.cpp  outputView.h
view/styles/: stylesheet.css
